--- a/packages/gatsby-sharp/package.json
+++ b/packages/gatsby-sharp/package.json
@@ -21,7 +21,9 @@
     "@babel/cli": "^7.15.5",
     "@babel/core": "^7.15.5",
     "babel-plugin-replace-ts-export-assignment": "^0.0.2",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "npm-run-all": "4.1.5",
+    "typescript": "^4.5.5"
   },
   "engines": {
     "node": ">=14.15.0"
